[package]
name = "cse403_distributed_hash_table"
version = "0.1.0"
authors = ["Evan Hruskar <hruskar.evan@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# See: https://www.reddit.com/r/rust/comments/abs0do/rust_newbie_question_about_multiple_binaries/
# https://doc.rust-lang.org/cargo/reference/manifest.html#the-project-layout
#[lib]
#name = "protocol"
#path = "src/lib.rs"

[dependencies]
# For yaml config files
config = "0.10.1"
# For serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.2.1"
# For Application benchmarking
rand = "0.7.3"
# For threads: crossbeam vs rayon vs toiko ???
# Perhaps toiko in the future for asynchronous TCP ?
# https://users.rust-lang.org/t/what-are-the-benefits-of-a-work-stealing-scheduler/24988

[[bin]]
name = "client"
path = "src/client/client.rs"

[[bin]]
name = "server"
path = "src/server/server.rs"

